Add vehicle followers endpoint
